--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -123,4 +123,13 @@
         app:layout_constraintStart_toStartOf="@+id/login_btn1"
         app:layout_constraintTop_toBottomOf="@+id/login_btn1" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/auto" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
