--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -5,13 +5,17 @@
         android:icon="@drawable/ic_calendar"
         android:title="Item" />
     <item
+        android:id="@+id/folder"
+        android:icon="@drawable/ic_folder"
+        android:title="Item" />
+    <item
         android:id="@+id/add"
         android:icon="@drawable/ic_add_circle"
         android:title="Item" />
     <item
-        android:id="@+id/folder"
-        android:icon="@drawable/ic_favorite"
-        android:title="Item" />
+        android:id="@+id/chart"
+        android:icon="@drawable/ic_chart"
+        android:title="chart" />
     <item
         android:id="@+id/setting"
         android:icon="@drawable/ic_person"
